add validation back to flaglist